# wipeout-rewrite

./: CMakeLists.txt
packaging/windows/: wipegame.aps  wipegame.rc
src/: render_gl.c  utils.h
src/wipeout/: scene.h
